--- a/Trip/Senarios/Reservations/View/CurrentReservationTableViewCell.xib
+++ b/Trip/Senarios/Reservations/View/CurrentReservationTableViewCell.xib
@@ -12,14 +12,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CurrentReservationTableViewCell" rowHeight="117" id="KGk-i7-Jjw" customClass="CurrentReservationTableViewCell" customModule="Trip" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="350" height="120"/>
+            <rect key="frame" x="0.0" y="0.0" width="350" height="140"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="350" height="120"/>
+                <rect key="frame" x="0.0" y="0.0" width="350" height="140"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B5o-vl-jGT" customClass="CardView" customModule="Trip" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="350" height="120"/>
+                        <rect key="frame" x="20" y="10" width="310" height="120"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Uju-xL-Zpf">
                                 <rect key="frame" x="10" y="10" width="47.5" height="21.5"/>
@@ -28,22 +28,22 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="haG-Yw-06L">
-                                <rect key="frame" x="309" y="15" width="31" height="14.5"/>
+                                <rect key="frame" x="269" y="15" width="31" height="14.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IbQ-0l-MNx">
-                                <rect key="frame" x="10" y="41.5" width="330" height="18"/>
+                                <rect key="frame" x="10" y="41.5" width="290" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="RCI-BH-Da7">
-                                <rect key="frame" x="10" y="80" width="330" height="30"/>
+                                <rect key="frame" x="10" y="80" width="290" height="30"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="js8-IC-saB">
-                                        <rect key="frame" x="0.0" y="0.0" width="100" height="30"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="86.5" height="30"/>
                                         <color key="backgroundColor" red="0.0" green="0.78166538480000003" blue="0.4476525187" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <state key="normal" title="Start Trip ">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -53,7 +53,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="got-Nh-3hB">
-                                        <rect key="frame" x="115" y="0.0" width="100" height="30"/>
+                                        <rect key="frame" x="101.5" y="0.0" width="87" height="30"/>
                                         <color key="backgroundColor" red="0.85882352941176465" green="0.30588235294117649" blue="0.20000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <state key="normal" title="Cancel Trip ">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -63,7 +63,7 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3TI-63-mdu">
-                                        <rect key="frame" x="230" y="0.0" width="100" height="30"/>
+                                        <rect key="frame" x="203.5" y="0.0" width="86.5" height="30"/>
                                         <color key="backgroundColor" name="TripColor"/>
                                         <state key="normal" title="Details">
                                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -75,7 +75,7 @@
                                 </subviews>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="IbQ-0l-MNx" secondAttribute="trailing" constant="10" id="2Iz-A2-bpR"/>
                             <constraint firstAttribute="trailing" secondItem="haG-Yw-06L" secondAttribute="trailing" constant="10" id="98Y-AQ-h9f"/>
@@ -91,11 +91,12 @@
                         </constraints>
                     </view>
                 </subviews>
+                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                 <constraints>
-                    <constraint firstItem="B5o-vl-jGT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="2gc-vV-lNo"/>
-                    <constraint firstAttribute="bottom" secondItem="B5o-vl-jGT" secondAttribute="bottom" id="3Vp-0c-sFD"/>
-                    <constraint firstAttribute="trailing" secondItem="B5o-vl-jGT" secondAttribute="trailing" id="TGr-po-yp3"/>
-                    <constraint firstItem="B5o-vl-jGT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="x6U-Uu-Dgr"/>
+                    <constraint firstItem="B5o-vl-jGT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="2gc-vV-lNo"/>
+                    <constraint firstAttribute="bottom" secondItem="B5o-vl-jGT" secondAttribute="bottom" constant="10" id="3Vp-0c-sFD"/>
+                    <constraint firstAttribute="trailing" secondItem="B5o-vl-jGT" secondAttribute="trailing" constant="20" id="TGr-po-yp3"/>
+                    <constraint firstItem="B5o-vl-jGT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="x6U-Uu-Dgr"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
