--- a/Trip/Senarios/Reservations/View/PreviousReservationTableViewCell.xib
+++ b/Trip/Senarios/Reservations/View/PreviousReservationTableViewCell.xib
@@ -12,14 +12,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="PreviousReservationTableViewCell" rowHeight="103" id="KGk-i7-Jjw" customClass="PreviousReservationTableViewCell" customModule="Trip" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="321" height="120"/>
+            <rect key="frame" x="0.0" y="0.0" width="321" height="140"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="321" height="120"/>
+                <rect key="frame" x="0.0" y="0.0" width="321" height="140"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cg3-LP-qiM" customClass="CardView" customModule="Trip" customModuleProvider="target">
-                        <rect key="frame" x="0.0" y="0.0" width="321" height="120"/>
+                        <rect key="frame" x="20" y="10" width="281" height="120"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n9H-8e-Sis">
                                 <rect key="frame" x="10" y="10" width="47.5" height="21"/>
@@ -28,19 +28,19 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hxv-cv-dvY">
-                                <rect key="frame" x="280" y="15" width="31" height="14.5"/>
+                                <rect key="frame" x="240" y="15" width="31" height="14.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WlT-dz-Q9j">
-                                <rect key="frame" x="10" y="41" width="301" height="18"/>
+                                <rect key="frame" x="10" y="41" width="261" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MkQ-9C-WXy">
-                                <rect key="frame" x="231" y="80" width="80" height="30"/>
+                                <rect key="frame" x="191" y="80" width="80" height="30"/>
                                 <color key="backgroundColor" name="TripColor"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="9UX-1R-jgf"/>
@@ -55,7 +55,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="MkQ-9C-WXy" secondAttribute="trailing" constant="10" id="3y9-h2-Bpc"/>
                             <constraint firstItem="n9H-8e-Sis" firstAttribute="top" secondItem="Cg3-LP-qiM" secondAttribute="top" constant="10" id="AQR-zG-336"/>
@@ -70,11 +70,12 @@
                         </constraints>
                     </view>
                 </subviews>
+                <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                 <constraints>
-                    <constraint firstItem="Cg3-LP-qiM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="42n-Ov-xNR"/>
-                    <constraint firstAttribute="trailing" secondItem="Cg3-LP-qiM" secondAttribute="trailing" id="Jte-yh-wcT"/>
-                    <constraint firstAttribute="bottom" secondItem="Cg3-LP-qiM" secondAttribute="bottom" id="ojw-uK-h1M"/>
-                    <constraint firstItem="Cg3-LP-qiM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="qCL-aA-8dh"/>
+                    <constraint firstItem="Cg3-LP-qiM" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="42n-Ov-xNR"/>
+                    <constraint firstAttribute="trailing" secondItem="Cg3-LP-qiM" secondAttribute="trailing" constant="20" id="Jte-yh-wcT"/>
+                    <constraint firstAttribute="bottom" secondItem="Cg3-LP-qiM" secondAttribute="bottom" constant="10" id="ojw-uK-h1M"/>
+                    <constraint firstItem="Cg3-LP-qiM" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="qCL-aA-8dh"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
